--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#book-a-table" class="book-a-table-btn scrollto">Book a table</a>
+      <a href="#book-a-table" class="book-a-table-btn scrollto">Log In / Sign Up</a>
 
     </div>
   </header><!-- End Header -->
