--- a/index.html
+++ b/index.html
@@ -60,29 +60,27 @@
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
           <li class="dropdown"><a href="#"><span>Provinsi</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a href="#">Aceh</a></li>
+              <li class="dropdown"><a href="#"><span>Sumatera</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Aceh</a></li>
-                  <li><a href="#">Sumatera</a></li>
-                  <li><a href="#">Riau</a></li>
-                  <li><a href="#">Jambi</a></li>
+                  <li><a href="#">Sumatera Utara</a></li>
+                  <li><a href="#">Sumatera Barat</a></li>
+                  <li><a href="#">Sumatera Selatan</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Riau</a></li>
+              <li><a href="#">Jambi</a></li>
+              <li><a href="#">Lampung</a></li>
+              <li><a href="#">DKI Jakarta</a></li>
+              <li><a href="#">Banten</a></li>
+              <li class="dropdown"><a href="#"><span>Jawa</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
                   <li><a href="#">Jawa Barat</a></li>
                   <li><a href="#">Jawa Tengah</a></li>
                   <li><a href="#">Jawa Timur</a></li>
-                  <li><a href="#">DKI Jakarta</a></li>
-                  <li><a href="#">DI Yogyakarta</a></li>
-                  <li><a href="#">Bali</a></li>
-                  <li><a href="#">Nusa Tenggara</a></li>
-                  <li><a href="#">Kalimantan</a></li>
-                  <li><a href="#">Sulawesi</a></li>
-                  <li><a href="#">Maluku</a></li>
-                  <li><a href="#">Papua</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">DI Yogyakarta</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
