--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li><a class="nav-link scrollto" href="#events">Events</a></li>
           <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-          <li class="dropdown"><a href="#"><span>Provinsi</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Lokasi</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Aceh</a></li>
               <li class="dropdown"><a href="#"><span>Sumatera</span> <i class="bi bi-chevron-right"></i></a>
@@ -81,6 +81,24 @@
                 </ul>
               </li>
               <li><a href="#">DI Yogyakarta</a></li>
+              <li><a href="#">Bali</a></li>
+              <li class="dropdown"><a href="#"><span>Nusa Tenggara</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">Nusa Tenggara Barat</a></li>
+                  <li><a href="#">Nusa Tenggara Timur</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Kalimantan</a></li>
+              <li class="dropdown"><a href="#"><span>Sulawesi</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">Sulawesi Utara</a></li>
+                  <li><a href="#">Sulawesi Tengah</a></li>
+                  <li><a href="#">Sulawesi Barat</a></li>
+                  <li><a href="#">Sulawesi Selatan</a></li>
+                  <li><a href="#">Sulawesi Tenggara</a></li>
+                </ul>
+              </li>
+              
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
