--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="sign.html">Sign In / Sign Up</a>
+      <a href="sign.html" class="book-a-table-btn scrollto">Sign In / Sign Up</a>
 
     </div>
   </header><!-- End Header -->
