--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span> <s>$7.00</s> $5.95</span>
+              <a href="#">Lobster Bisque</a><span> <s>$7.00</s> $5.95 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -244,7 +244,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="#">Bread barrel</a><span>$6.95</span>
+              <a href="#">Bread barrel</a><span> <s>$7.00</s> $6.95 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -253,7 +253,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>$7.95</span>
+              <a href="#">Crab Cake</a><span> <s>$8.00</s> $7.95 </span>
             </div>
             <div class="menu-ingredients">
               A delicate crab cake served on a toasted roll with lettuce and tartar sauce
