--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
                   <li><a href="#">Sulawesi Selatan</a></li>
                   <li><a href="#">Sulawesi Tenggara</a></li>
                 </ul>
-              </li>
-              
+              </li>  
             </ul>
+            <form>
+                <input class="search" type="text" placeholder="Cari..." required>	
+                <input class="button" type="button" value="Cari">		
+              </form>
           </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
