--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
               </li>  
             </ul>
           </li>
+          <form>     
+              <input class="search" type="search" placeholder="Search...">
+              <input class="button" type="submit" value="Search">
+          </form>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
