--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.png" rel="icon">
-  <link href="assets/img/logo.png" rel="apple-touch-icon">
+  <link href="assets/img/logodiskon.png" rel="icon">
+  <link href="assets/img/logodiskon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -44,7 +44,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <div class="logo me-auto">
-        <h1><a href="index.html">DiskonKuyy</a></h1>
+		<h1><a href="index.html">DiskonKuyy</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -55,55 +55,18 @@
           <li><a class="nav-link scrollto" href="#about">Tentang</a></li>
           <li><a class="nav-link scrollto" href="#menu">Daftar Promo</a></li>
           <li><a class="nav-link scrollto" href="#specials">Promo Spesial Event</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-          <li class="dropdown"><a href="#"><span>Lokasi</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Aceh</a></li>
-              <li class="dropdown"><a href="#"><span>Sumatera</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Sumatera Utara</a></li>
-                  <li><a href="#">Sumatera Barat</a></li>
-                  <li><a href="#">Sumatera Selatan</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Riau</a></li>
-              <li><a href="#">Jambi</a></li>
-              <li><a href="#">Lampung</a></li>
-              <li><a href="#">DKI Jakarta</a></li>
-              <li><a href="#">Banten</a></li>
-              <li class="dropdown"><a href="#"><span>Jawa</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Jawa Barat</a></li>
-                  <li><a href="#">Jawa Tengah</a></li>
-                  <li><a href="#">Jawa Timur</a></li>
-                </ul>
-              </li>
-              <li><a href="#">DI Yogyakarta</a></li>
-              <li><a href="#">Bali</a></li>
-              <li class="dropdown"><a href="#"><span>Nusa Tenggara</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Nusa Tenggara Barat</a></li>
-                  <li><a href="#">Nusa Tenggara Timur</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Kalimantan</a></li>
-              <li class="dropdown"><a href="#"><span>Sulawesi</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Sulawesi Utara</a></li>
-                  <li><a href="#">Sulawesi Tengah</a></li>
-                  <li><a href="#">Sulawesi Barat</a></li>
-                  <li><a href="#">Sulawesi Selatan</a></li>
-                  <li><a href="#">Sulawesi Tenggara</a></li>
-                </ul>
-              </li>  
-            </ul>
-          </li>
+          <li><a class="nav-link scrollto" href="#gallery">Galeri</a></li>
+          <li><a class="nav-link scrollto" href="#"></a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
-      <a href="sign.html" class="book-a-table-btn scrollto">Sign In / Sign Up</a>
-
+	  
+	<form>
+		<input class="search" type="text" placeholder="Cari..." required>
+		<input class="button" type="button" value="Cari">		
+	</form>
+	
+	  <a href="sign.html" class="book-a-table-btn scrollto">Masuk Akun</a>
     </div>
   </header><!-- End Header -->
 
@@ -133,8 +96,8 @@
           <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animate__animated animate__fadeInDown"><span>Promo</span> Hunting</h2>
+                <p class="animate__animated animate__fadeInUp">Membantu para promo hunter untuk mencari diskon dan promo setiap cafe maupun restoran. Menghadirkan fitur untuk mencari cafe maupun restoran yang dicari dengan memilih daerah yang diinginkan.</p>
                 <div>
                   <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Lihat Promo</a>
                 </div>
@@ -146,8 +109,8 @@
           <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+                <h2 class="animate__animated animate__fadeInDown"><span>Promo</span> Hunting</h2>
+                <p class="animate__animated animate__fadeInUp">Membantu para promo hunter untuk mencari diskon dan promo setiap cafe maupun restoran. Menghadirkan fitur untuk mencari cafe maupun restoran yang dicari dengan memilih daerah yang diinginkan.</p>
                 <div>
                   <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Lihat Promo</a>
                 </div>
@@ -313,7 +276,7 @@
             </div>
           </div>
 		  
-		      <div class="col-lg-6 menu-item filter-specialty">
+		  <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
               <a href="#">Ice Cream</a><span> <s>$5.00</s> $4.50</span>
             </div>
