--- a/sign.html
+++ b/sign.html
@@ -33,7 +33,7 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
-        <img src="assets/img/logodiskon.png" width="100" height="100">
+        <img src="assets/img/logo.png" width="100" height="100">
       </div>
     </footer><!-- End Footer -->
 
