--- a/index.html
+++ b/index.html
@@ -31,14 +31,6 @@
 
 <body>
 
-  <!-- ======= Top Bar 
-  <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-center justify-content-lg-start">
-      <i class="bi bi-phone d-flex align-items-center"><span>+1 5589 55488 55</span></i>
-      <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sat: 11:00 AM - 23:00 PM</span></i>
-    </div>
-  </section> ======= -->
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center header-transparent">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -53,7 +45,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">Tentang</a></li>
-          <li><a class="nav-link scrollto" href="#menu">Daftar Promo</a></li>
+          <li><a class="nav-link scrollto" href="menu.html">Daftar Promo</a></li>
           <li><a class="nav-link scrollto" href="#specials">Promo Spesial Event</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Galeri</a></li>
           <li><a class="nav-link scrollto" href="#"></a></li>
@@ -154,6 +146,11 @@
                 <li><i class="bx bx-check-double"></i> Filterisasi yang unik dan mudah dicari.</li>
                 <li><i class="bx bx-check-double"></i> Data selalu valid.</li>
               </ul>
+              <!--<p>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa qui officia deserunt mollit anim id est laborum
+              </p>-->
             </div>
 
           </div>
