--- a/menu.html
+++ b/menu.html
@@ -44,10 +44,10 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html #about">Tentang</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Tentang</a></li>
           <li><a class="nav-link scrollto active" href="menu.html">Daftar Promo</a></li>
-          <li><a class="nav-link scrollto" href="index.html #specials">Promo Spesial Event</a></li>
-          <li><a class="nav-link scrollto" href="index.html #gallery">Galeri</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Promo Spesial Event</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Galeri</a></li>
           <li><a class="nav-link scrollto" href="#"></a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
