--- a/index.html
+++ b/index.html
@@ -160,10 +160,9 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Menu Section ======= -->
+    <!-- ======= Menu Section 
     <section id="menu" class="menu">
       <div class="container">
-
         <div class="section-title">
           <h2>Daftar <span>Promo</span></h2>
         </div>
@@ -262,7 +261,7 @@
             </div>
           </div>
 		  
-		  <div class="col-lg-6 menu-item filter-specialty">
+	<div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
               <a href="#">Ice Cream</a><span> <s>$5.00</s> $4.50</span>
             </div>
@@ -270,11 +269,9 @@
               Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
             </div>
           </div>
-
         </div>
-
       </div>
-    </section><!-- End Menu Section -->
+    </section>   ======= End Menu Section -->
 
     <!-- ======= Specials Section ======= -->
     <section id="specials" class="specials">
