--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
         <div class="section-title">
           <h2>Promo <span>Spesial Event</span></h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>Promo berlaku pada setiap Hari Libur Nasional.</p>
         </div>
 
         <div class="row">
