--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2 class="animate__animated animate__fadeInDown"><span>Promo</span> Hunting</h2>
                 <p class="animate__animated animate__fadeInUp">Membantu para promo hunter untuk mencari diskon dan promo setiap cafe maupun restoran. Menghadirkan fitur untuk mencari cafe maupun restoran yang dicari dengan memilih daerah yang diinginkan.</p>
                 <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Lihat Promo</a>
+                  <a href="menu.html" class="btn-menu animate__animated animate__fadeInUp scrollto">Lihat Promo</a>
                 </div>
               </div>
             </div>
@@ -91,7 +91,7 @@
                 <h2 class="animate__animated animate__fadeInDown"><span>Promo</span> Hunting</h2>
                 <p class="animate__animated animate__fadeInUp">Membantu para promo hunter untuk mencari diskon dan promo setiap cafe maupun restoran. Menghadirkan fitur untuk mencari cafe maupun restoran yang dicari dengan memilih daerah yang diinginkan.</p>
                 <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Lihat Promo</a>
+                  <a href="menu.html" class="btn-menu animate__animated animate__fadeInUp scrollto">Lihat Promo</a>
                 </div>
               </div>
             </div>
@@ -104,7 +104,7 @@
                 <h2 class="animate__animated animate__fadeInDown"><span>Promo</span> Hunting</h2>
                 <p class="animate__animated animate__fadeInUp">Membantu para promo hunter untuk mencari diskon dan promo setiap cafe maupun restoran. Menghadirkan fitur untuk mencari cafe maupun restoran yang dicari dengan memilih daerah yang diinginkan.</p>
                 <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Lihat Promo</a>
+                  <a href="menu.html" class="btn-menu animate__animated animate__fadeInUp scrollto">Lihat Promo</a>
                 </div>
               </div>
             </div>
