--- a/signup.html
+++ b/signup.html
@@ -49,15 +49,15 @@
         <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form">
           <div class="row">
             <div class="form-group mt-3">
-              <textarea class="form-control" name="username" rows="1" placeholder="Username"></textarea>
+              <input type="text" class="form-control" placeholder="Username" name="uname" required>
               <div class="validate"></div>
             </div>
             <div class="form-group mt-3">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email">
+              <input type="email" class="form-control" placeholder="Email" name="email" required>
               <div class="validate"></div>
             </div>
             <div class="form-group mt-3">
-              <textarea class="form-control" name="password" rows="1" placeholder="Password"></textarea>
+              <input type="password" class="form-control" placeholder="Password" name="psw" required>
               <div class="validate"></div>
             </div>
           <div class="mb-3">
@@ -65,7 +65,7 @@
             <div class="error-message"></div>
             <div class="sent-message">Anda berhasil membuat akun baru. Silahkan Sign In!</div>
           </div>
-          <div class="text-center"><button type="submit">Sign Up</button></div>
+		  <div class="text-center"><a href="index.html" class="signin">Sign Up</a></div>
         </form>
 
       </div>
