--- a/menu.html
+++ b/menu.html
@@ -76,50 +76,23 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Lihat Semua</li>
-              <li data-filter=".filter-sbux">Starbucks</li>
-              <li data-filter=".filter-kfc">KFC</li>
-			  <li data-filter=".filter-mcd">McDonald's</li>
-              <li data-filter=".filter-janjiw">Janji Jiwa</li>
 			  <li data-filter=".filter-burgerking">Burger King</li>
+              <li data-filter=".filter-janjiw">Janji Jiwa</li>
 			  <li data-filter=".filter-trafbun">Traffic Bun</li>
+			  <li data-filter=".filter-hokben">HokBen</li>
+			  <li data-filter=".filter-yoba">Yuba Tea</li>
+			  <li data-filter=".filter-ricis">Richeese Factory</li>
+			  <li data-filter=".filter-xiboba">Xiboba</li>
             </ul>
           </div>
         </div>
 
         <div class="row menu-container">
-
-          <!-- Starbucks -->
-		  <div class="col-lg-6 menu-item filter-sbux">
-            <div class="menu-content">
-              <a href="#">Greek Salad</a><span> <s>$10.00</s> $9.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
-            </div>
-          </div>
 		  
           <!-- Burger King -->
 		  <div class="col-lg-6 menu-item filter-burgerking">
             <div class="menu-content">
-              <a href="#">King Box</a><span> <s>Rp50.455</s> 35.909 </span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-burgerking">
-            <div class="menu-content">
-              <a href="#">King Box</a><span> <s>$10.00</s> $9.95 </span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-burgerking">
-            <div class="menu-content">
-              <a href="#">King Box</a><span> <s>$10.00</s> $9.95 </span>
+              <a href="#">King Box</a><span> <s>50.455</s> Rp35.909 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -129,66 +102,97 @@
           <!-- Janji Jiwa -->
 		  <div class="col-lg-6 menu-item filter-janjiw">
             <div class="menu-content">
-              <a href="#">Combo Fries 3</a><span> <s>Rp86.000</s> 54.000 </span>
+              <a href="#">Combo Fries 3</a><span> <s>86.000</s> Rp54.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
             </div>
           </div>
 		  
-          <!-- McDonald's -->
-		  <div class="col-lg-6 menu-item filter-mcd">
-            <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span> <s>$7.00</s> $5.95 </span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-
-          <div class="col-lg-6 menu-item filter-mcd">
-            <div class="menu-content">
-              <a href="#">Crab Cake</a><span> <s>$8.00</s> $7.95 </span>
-            </div>
-            <div class="menu-ingredients">
-              A delicate crab cake served on a toasted roll with lettuce and tartar sauce
-            </div>
-          </div>
-
-          <!-- KFC -->
-		  <div class="col-lg-6 menu-item filter-kfc">
-            <div class="menu-content">
-              <a href="#">Caesar Selections</a><span> <s>$9.00</s> $8.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-
-          <div class="col-lg-6 menu-item filter-kfc">
-            <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span> <s>$5.00</s> $4.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-kfc">
-            <div class="menu-content">
-              <a href="#">Greek Salad</a><span> <s>$10.00</s> $9.95</span>
-            </div>
-            <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
-            </div>
-          </div>
-
           <!-- Traffic Bun -->
 		  <div class="col-lg-6 menu-item filter-trafbun">
             <div class="menu-content">
-              <a href="#">4 Boston Cheese Burger</a><span> <s>Rp200.000</s> 84.000 </span>
+              <a href="#">4 Boston Cheese Burger</a><span> <s>200.000</s> Rp84.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- HokBen -->
+		  <div class="col-lg-6 menu-item filter-hokben">
+            <div class="menu-content">
+              <a href="#">2 Sample Set (Teriyaki + Yakiniku)</a><span> <s>176.000</s> Rp135.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-hokben">
+            <div class="menu-content">
+              <a href="#">Paket A + B + C</a><span> <s>167.500</s> Rp115.500 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Yoba Tea -->
+		  <div class="col-lg-6 menu-item filter-yoba">
+            <div class="menu-content">
+              <a href="#">Aishiteru Ichigo</a><span> <s>20.000</s> Rp12.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-yoba">
+            <div class="menu-content">
+              <a href="#">Golden Auzora</a><span> <s>15.000</s> Rp8.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-yoba">
+            <div class="menu-content">
+              <a href="#">Popcorn Auzora</a><span> <s>21.000</s> Rp12.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Richeese Factory -->
+		  <div class="col-lg-6 menu-item filter-ricis">
+            <div class="menu-content">
+              <a href="#">Combo Fire Chicken</a><span> <s>40.909</s> Rp31.818 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Xiboba -->
+		  <div class="col-lg-6 menu-item filter-xiboba">
+            <div class="menu-content">
+              <a href="#">Crunchy Signature Kakao</a><span> <s>25.000</s> Rp19.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-xiboba">
+            <div class="menu-content">
+              <a href="#">Signature Matcha Dalgona</a><span> <s>25.000</s> Rp19.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-xiboba">
+            <div class="menu-content">
+              <a href="#">Brown Sugar Grass Jelly Fresh Milk</a><span> <s>23.000</s> Rp17.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
