--- a/menu.html
+++ b/menu.html
@@ -76,13 +76,15 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Lihat Semua</li>
+			  <li data-filter=".filter-bakmi">Bakmi GM</li>
 			  <li data-filter=".filter-burgerking">Burger King</li>
-              <li data-filter=".filter-janjiw">Janji Jiwa</li>
-			  <li data-filter=".filter-trafbun">Traffic Bun</li>
+			  <li data-filter=".filter-chigo">Chigo</li>
 			  <li data-filter=".filter-hokben">HokBen</li>
-			  <li data-filter=".filter-yoba">Yuba Tea</li>
+              <li data-filter=".filter-janjiw">Janji Jiwa</li>
 			  <li data-filter=".filter-ricis">Richeese Factory</li>
+			  <li data-filter=".filter-trafbun">Traffic Bun</li>
 			  <li data-filter=".filter-xiboba">Xiboba</li>
+			  <li data-filter=".filter-yoba">Yuba Tea</li>
             </ul>
           </div>
         </div>
@@ -193,6 +195,82 @@
 		  <div class="col-lg-6 menu-item filter-xiboba">
             <div class="menu-content">
               <a href="#">Brown Sugar Grass Jelly Fresh Milk</a><span> <s>23.000</s> Rp17.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Chigo -->
+		  <div class="col-lg-6 menu-item filter-chigo">
+            <div class="menu-content">
+              <a href="#">Reguler Boneless Rice Set</a><span> <s>30.000</s> Rp21.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-chigo">
+            <div class="menu-content">
+              <a href="#"> 2 x 3 Pcs Wings Rice Set</a><span> <s>50.454</s> Rp42.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Bakmi GM -->
+		  <div class="col-lg-6 menu-item filter-bakmi">
+            <div class="menu-content">
+              <a href="#">Pangsit Kuah Frozen</a><span> <s>23.637</s> Rp22.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-bakmi">
+            <div class="menu-content">
+              <a href="#">Bakmi Special GM</a><span> <s>33.637</s> Rp24.546 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-bakmi">
+            <div class="menu-content">
+              <a href="#">Pangsit Goreng</a><span> <s>31.819</s> Rp24.546 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-bakmi">
+            <div class="menu-content">
+              <a href="#"> 2 x 3 Pcs Wings Rice Set</a><span> <s>50.454</s> Rp42.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-bakmi">
+            <div class="menu-content">
+              <a href="#">Reguler Boneless Rice Set</a><span> <s>30.000</s> Rp21.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-bakmi">
+            <div class="menu-content">
+              <a href="#"> 2 x 3 Pcs Wings Rice Set</a><span> <s>50.454</s> Rp42.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-bakmi">
+            <div class="menu-content">
+              <a href="#"> 2 x 3 Pcs Wings Rice Set</a><span> <s>50.454</s> Rp42.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
