--- a/menu.html
+++ b/menu.html
@@ -75,6 +75,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Lihat Semua</li>
+			  <li data-filter=".filter-abuba">Abuba Steak</li>
 			  <li data-filter=".filter-bakmi">Bakmi GM</li>
 			  <li data-filter=".filter-burgerking">Burger King</li>
 			  <li data-filter=".filter-chigo">Chigo</li>
@@ -294,6 +295,32 @@
 		  <div class="col-lg-6 menu-item filter-bakmi">
             <div class="menu-content">
               <a href="#">Ayam Lada Cha-Cha Frozen</a><span> <s>26.364</s> Rp22.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Abuba Steak -->
+		  <div class="col-lg-6 menu-item filter-abuba">
+            <div class="menu-content">
+              <a href="#">Double Package Deals 1</a><span> <s>217.000</s> Rp140.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-abuba">
+            <div class="menu-content">
+              <a href="#">Double Package Deals 2</a><span> <s>220.000</s> Rp145.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  <div class="col-lg-6 menu-item filter-abuba">
+            <div class="menu-content">
+              <a href="#">Double Package Deals 3</a><span> <s>297.000</s> Rp240.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
