--- a/signup.html
+++ b/signup.html
@@ -65,7 +65,7 @@
             <div class="error-message"></div>
             <div class="sent-message">Anda berhasil membuat akun baru. Silahkan Sign In!</div>
           </div>
-		  <div class="text-center"><a href="index.html" class="signin">Sign Up</a></div>
+		  <div class="text-center"><a href="sign.html" class="signin">Sign Up</a></div>
         </form>
 
       </div>
