--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="row">
 
-          <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/about.jpg");'>
+          <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/about.png");'>
             <a href="https://youtu.be/gllEt325suY" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
