--- a/menu.html
+++ b/menu.html
@@ -138,7 +138,7 @@
               <a href="#">Combo Fries 3</a><span> <s>86.000</s> Rp54.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              kentang goreng dengan pilihan saus, toast, dan minuman favoritmu
             </div>
           </div>
 		  
@@ -148,7 +148,7 @@
               <a href="#">4 Boston Cheese Burger</a><span> <s>200.000</s> Rp84.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              4 boston cheese burger
             </div>
           </div>
 
@@ -176,7 +176,7 @@
               <a href="#">Aishiteru Ichigo</a><span> <s>20.000</s> Rp12.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Strawberry Cheese Cake
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-yoba">
@@ -184,7 +184,7 @@
               <a href="#">Golden Auzora</a><span> <s>15.000</s> Rp8.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Sakura Orange Blue Tea
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-yoba">
@@ -192,7 +192,7 @@
               <a href="#">Popcorn Auzora</a><span> <s>21.000</s> Rp12.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Popcorn Blue Tea
             </div>
           </div>
 
@@ -202,7 +202,7 @@
               <a href="#">Combo Fire Chicken</a><span> <s>40.909</s> Rp31.818 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              1 Fire Chicken + 1 Nasi + 1 Saus Keju + 1 Minuman ukuran Medium
             </div>
           </div>
 
@@ -212,7 +212,7 @@
               <a href="#">Crunchy Signature Kakao</a><span> <s>25.000</s> Rp19.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Cadburry chocolate milk dipadukan dengan chocolate sauce, cream cheese dan crunchy chocolate crumbs
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-xiboba">
@@ -220,7 +220,7 @@
               <a href="#">Signature Matcha Dalgona</a><span> <s>25.000</s> Rp19.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Matcha Dalgona dipadukan dengan Matcha Fresh Milk dilengkapi dengan Milk Pudding
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-xiboba">
@@ -236,7 +236,7 @@
               <a href="#">Brown Sugar Boba [Milk Tea + Fresh Milk]</a><span> <s>46.000</s> Rp33.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Susu Murni dipadukan dengan Gula Aren Murni, Grass Jelly dan Homemade Macchiato
             </div>
           </div>
 		
@@ -246,7 +246,7 @@
               <a href="#">Reguler Boneless Rice Set</a><span> <s>30.000</s> Rp21.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Regular boneless chicken thigh + 1 rice
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-chigo">
@@ -296,7 +296,7 @@
               <a href="#">Pangsit Kuah Frozen</a><span> <s>23.637</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Pangsit isi ayam yang sudah dibekukan, isi 10 pcs + kaldu ayam + sambal
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
@@ -304,7 +304,7 @@
               <a href="#">Bakmi Special GM</a><span> <s>33.637</s> Rp24.546 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Bakmi Rebus dengan topping Ayam dan Jamur Saus Spesial GM, Caisim dan Kuah
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
@@ -320,7 +320,7 @@
               <a href="#">Bihun Special GM</a><span> <s>33.367</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Bakmi Rebus dengan topping Ayam dan Jamur Saus Spesial GM, Caisim dan Kuah
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
@@ -328,7 +328,7 @@
               <a href="#">Bihun Ayam Lada Cha-Cha</a><span> <s>26.364</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Bihun dengan topping ayam giling yang dimasak dengan saus lada ala GM
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
@@ -336,7 +336,7 @@
               <a href="#">Nasi Ayam GM</a><span> <s>30.000</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Nasi Putih dengan topping Ayam dan Jamur Saus Spesial GM, Caisim dan Kuah
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
